objects/Project__c.object
<CustomObject>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>If( Chartmogul_ARR__c &gt;0, Chartmogul_ARR__c,
If( Prior_ARR__c &gt; 0, Prior_ARR__c,
IF( Maximum_ARR__c &gt; 0,  Maximum_ARR__c, null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>User Prior or Max ARR if Chartmogul ARR = 0</inlineHelpText>
        <label>ARR_Delete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <inlineHelpText>MRR updated from ETL.</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <formula>ARR_New__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                    <default>true</default>
                    <label>Self Service</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Subproject</fullName>
                    <label>Subspace</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <isActive>false</isActive>
                    <label>Custom</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Current_Backend_Stage__c = &quot;Active Contract&quot; || Current_Backend_Stage__c = &quot;Active Subscription&quot;, 
if(ARR_New__c&gt;0, Current_Backend_Stage__c,
IF(Account_Name__r.Account_ARR__c &gt; 0 ||  Parent_Project__r.ARR_New__c &gt; 0, &quot;Subspace&quot;, 
IF(datevalue( etl_subscription_end_date__c) - today() &gt; 0, &quot;Check Data: 100% Discount?&quot;,&quot;Check Data-Churn?&quot;))),


Case ( Current_Backend_Stage__c,
&quot;Deleted&quot; , IF( Initial_ARR__c &gt; 0, &quot;Churned Customer&quot;,&quot;Deleted&quot;),
&quot;Churned Customer&quot;, If(Isblank( Parent_Project__c ), &quot;Churned Customer&quot;,&quot;Churned Subspace&quot;),
&quot;&quot;,IF(now()- CreatedDate &lt;1, &quot;New&quot;,&quot; - Missing&quot;),
 Current_Backend_Stage__c ))</formula>
        <inlineHelpText>Based on MRR &amp; Backend stage</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>admins__c</fullName>
        <inlineHelpText># Active admins in pb backend, updated by ETL pipeline</inlineHelpText>
        <label># admins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARR_New__c</fullName>
        <formula>IF( Current_Backend_Stage__c = &quot;Deleted&quot; || Current_Backend_Stage__c = &quot;Churned Customer&quot; || Current_Backend_Stage__c = &quot;Expired Contract&quot; , 0 ,

MRR__c * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BI_City__c</fullName>
        <label>BI City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_City__c</fullName>
        <label>CC City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier__c</fullName>
        <formula>Account_Name__r.CS_Tier__c</formula>
        <label>CS Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>editors__c</fullName>
        <label># editors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>viewers__c</fullName>
        <label># viewers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BI_State__c</fullName>
        <label>BI State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_State__c</fullName>
        <label>CC State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date_Delete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>Account_Name__r.ZI_Industry__c</formula>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_URL__c</fullName>
        <description>URL of project website</description>
        <label>Team URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Delta__c</fullName>
        <formula>ARR_New__c  - Prior_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current ARR - Prior ARR</inlineHelpText>
        <label>ARR Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>not correct? Checked for paying active subscriptions</inlineHelpText>
        <label>Cancelled_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InO_Stage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stage of the primary (Initial) Opportunity</inlineHelpText>
        <label>InO Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_ARR__c</fullName>
        <label>Prior ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account_Name__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Address__c</fullName>
        <label>BI Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Country__c</fullName>
        <label>BI Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <label>CC Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Country__c</fullName>
        <label>CC Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Cycle</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Plan__c</fullName>
        <label>Prior Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>Round( Chartmogul_MRR__c / 100,0) + 
Case( Current_Backend_Stage__c ,
&quot;Deleted&quot;,-10,
&quot;Trial Expired&quot;,-1,
&quot;Active Subscription&quot;,10,
&quot;Active Contract&quot;, 15,
&quot;Churned Customer&quot;,5,
&quot;Expired Contract&quot;,6,
&quot;Trial Active&quot;,1,
&quot;Badproject&quot;,-5,
0)

- (today() - datevalue(CreatedDate )) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Space_Plan__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Space_Project_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Plan__c</fullName>
        <description>Customer space current trial plan name</description>
        <label>Trial Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier_ARR__c</fullName>
        <formula>IF( ARR_New__c &gt; 0,  ARR_New__c, 
IF( Prior_ARR__c &gt; 0, Prior_ARR__c, NULL ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Tier ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_ARR__c</fullName>
        <inlineHelpText>First non 0 ARR</inlineHelpText>
        <label>Initial ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_ARR__c</fullName>
        <label>Maximum ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Copy__c</fullName>
        <inlineHelpText>Picklist field replicating Status Formula Field</inlineHelpText>
        <label>Status-Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitally_CSM__c</fullName>
        <label>Vitally CSM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Lookup to Account</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Name from Account Record</inlineHelpText>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Project Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Plan__c</fullName>
        <inlineHelpText>Current Plan for this project</inlineHelpText>
        <label>Current Plan</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Plan__c</fullName>
        <label>Initial Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Version__c</fullName>
        <inlineHelpText>Version of the current product plan</inlineHelpText>
        <label>Current Plan Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Makers__c</fullName>
        <label>Prior Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product</description>
        <label>Plan</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contributors__c</fullName>
        <inlineHelpText># Active contributors in pb backend, updated by ETL pipeline</inlineHelpText>
        <label># contributors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.Full_Name__c</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_VAT_Number__c</fullName>
        <label>BI VAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_status__c</fullName>
        <label>Health status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Dark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InO_Max_Stage__c</fullName>
        <formula>Opportunity__r.Max_Stage_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Initial Opportunity Max Stage Achieved</inlineHelpText>
        <label>InO Max Stage</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maker_Overage__c</fullName>
        <formula>If( Status__c = &quot;Active Contract&quot;,
  -1* min( Contracted_Makers__c -  Project_makers__c ,0),Null)</formula>
        <inlineHelpText>Makers in excess of contracted makers, for active contract spaces only.</inlineHelpText>
        <label>Maker Overage-HIDDEN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_PB_ID__c</fullName>
        <description>ID of project from ProductBoardApp</description>
        <externalId>true</externalId>
        <label>Project PB ID</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vitally_Users__c</fullName>
        <label>Vitally Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_uuid__c</fullName>
        <label>customer_uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Delta_Type__c</fullName>
        <formula>IF(ARR_Delta__c = 0 ,&quot;&quot;,
IF(ARR_Delta__c&gt;0,
IF( Prior_ARR__c &gt;0, &quot;Upgrade&quot;,&quot;New Business&quot;),
IF (  ARR_New__c  &gt; 0, &quot;Contraction&quot;,&quot;Cancellation&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR Event Change Type</inlineHelpText>
        <label>ARR Delta Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Postal_Code__c</fullName>
        <label>BI Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Postal_Code__c</fullName>
        <label>CC Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier_Makers__c</fullName>
        <formula>If( Purchased_Makers__c &gt; 0, Purchased_Makers__c , 
IF ( Initial_ARR__c &gt; 0, Max( Prior_Makers__c ,  admins__c +  editors__c ,  Initial_Makers__c ),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Makers for current or churned customers to determine CS tier</inlineHelpText>
        <label>CS Tier Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chartmogul_ARR__c</fullName>
        <formula>IF(  Current_Backend_Stage__c  = &quot;Deleted&quot; || Current_Backend_Stage__c  = &quot;Churned Customer&quot; ||  Current_Backend_Stage__c  = &quot;Expired Contract&quot; , 0 ,

 Chartmogul_MRR__c  * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chartmogul ARR Delete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chartmogul_MRR__c</fullName>
        <label>Chartmogul MRR Delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chartmogul_URL__c</fullName>
        <label>Chartmogul URL Delete</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Initial_Makers__c</fullName>
        <label>Initial Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Child_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_makers__c</fullName>
        <formula>IF(
    or( 
        Current_Backend_Stage__c = &quot;Trial Expired&quot;, 
        Current_Backend_Stage__c = &quot;Deleted&quot;, 
        Current_Backend_Stage__c = &quot;Churned Customer&quot;),
    0,    
    admins__c + editors__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Active admins + editors (Formula based on PB backend # Admins &amp; Editors)</inlineHelpText>
        <label># makers in use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_ID_Long__c</fullName>
        <formula>CASESAFEID(Account_Name__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <description>Returns the Segment of the account the Project is tied to based on employee count + country</description>
        <formula>Account_Name__r.Suggested_Segmentation_employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Employee # Segment</inlineHelpText>
        <label>Account Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Company_Name__c</fullName>
        <label>BI Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chartmogul_Plan__c</fullName>
        <label>Chartmogul Plan Delete</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Account__c</fullName>
        <formula>Account_ID__c =  Master_User_Contact__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account IS same on project account and master user account</inlineHelpText>
        <label>Correct Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_ETL_Update__c</fullName>
        <label>Last ETL Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PB_Account_Name__c</fullName>
        <label>PB Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit project id</inlineHelpText>
        <label>Project ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Manager__c</fullName>
        <formula>Account_Name__r.Success_Manager__r.Email</formula>
        <label>Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Last_Updated__c</fullName>
        <label>ARR Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Billing_Email__c</fullName>
        <label>CC Billing Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InO_Close_Credit__c</fullName>
        <formula>IF(Opportunity__r.Close_Credited_To__c = &quot;Sales&quot;,&quot;Sales&quot;, &quot;Self Service&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Initial Opportunity Close Credit to</inlineHelpText>
        <label>InO Close Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Looker_Dashboard__c</fullName>
        <formula>HYPERLINK(&quot;https://productboard.looker.com/dashboards/productboard::space_kpi_dashboard?Space=&quot; &amp; Project_Name_Short__c ,&quot;Link to Space KPI Dashboard for &quot; &amp; Project_Name_Short__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Looker Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_User_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master User Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_admins__c</fullName>
        <label>Number of admins_Delete(Rollup)</label>
        <summaryFilterItems>
            <field>Project_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_User__c.Project_Role__c</field>
            <operation>equals</operation>
            <value>admin</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Purchased_Makers__c</fullName>
        <formula>IF( Current_Backend_Stage__c =&quot;Active Contract&quot;,  Contracted_Makers__c  ,
   IF ( Current_Backend_Stage__c =&quot;Active Subscription&quot;, Project_makers__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for contracts the number is from contracted makers, for subscriptions the # of makers used</inlineHelpText>
        <label>Purchased Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Employees__c</fullName>
        <formula>Account_Name__r.Max_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>IF( Account_Name__r.Bad_Account__c ,  Project_Name_Short__c &amp; &quot;(&quot; &amp; Account_Name__r.Name &amp; &quot;)&quot;,
Account_Name__r.Name)</formula>
        <inlineHelpText>Account Name Text (for Vitally)</inlineHelpText>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Not Found_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chartmogul_Status__c</fullName>
        <label>Chartmogul Status Delete</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>Latest contract end date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted_Makers__c</fullName>
        <inlineHelpText>Number of Makers purchased in manual contracts</inlineHelpText>
        <label>Contracted Makers</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <formula>Account_Name__r.Executive_Sponsor__r.Full_Name__c</formula>
        <label>Executive Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_editors__c</fullName>
        <label>Number of editors_Delete(Rollup)</label>
        <summaryFilterItems>
            <field>Project_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_User__c.Project_Role__c</field>
            <operation>equals</operation>
            <value>editor</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_viewers__c</fullName>
        <label>Number of viewers_Delete(Rollup)</label>
        <summaryFilterItems>
            <field>Project_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_User__c.Project_Role__c</field>
            <operation>equals</operation>
            <value>viewer</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paid_Project_Name__c</fullName>
        <formula>IF (Paid__c,  Project_Name_Short__c,
  If( Contains(Status__c ,&quot;Subspace&quot;),
  IF( ISBlank(Parent_Project__c) ,&quot;Missing Parent Project&quot;, Parent_Project__r.Project_Name_Short__c ),&quot;&quot;))</formula>
        <inlineHelpText>Parent project name for subspaces, otherwise project name for paid projects</inlineHelpText>
        <label>Paid Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Next_Step__c</fullName>
        <description>Next Step re: Renewal (Risk Mitigation)</description>
        <label>Vitally Next Step</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BI_Additional_Info__c</fullName>
        <label>BI Additional Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodData_Dashboard__c</fullName>
        <label>GoodData Dashboard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Name_Short__c</fullName>
        <formula>left(Name,FIND(&quot;.&quot;, Name)-1)</formula>
        <label>Project Name (Short)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Carbon_Copy__c</fullName>
        <description>Copied version of Status formula field. For use w/ rollup fields on Account Object</description>
        <label>Prior Status</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Date_Correction__c</fullName>
        <formula>Case( ARR_Delta_Type__c ,
&quot;New Business&quot;, datevalue( etl_subscription_start_date__c ),
&quot;Cancellation&quot;,datevalue( etl_subscription_end_date__c ),
 datevalue(ARR_Last_Updated__c ))</formula>
        <label>ARR Date Correction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>IF( IsPickVal(Account_Name__r.Owner.Team__c,&quot;Sales-Manager&quot;) ||  IsPickVal(Account_Name__r.Owner.Team__c,&quot;System/Automation&quot;),&quot;&quot;,Account_Name__r.Owner.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Formuala__c</fullName>
        <formula>IF(Current_Backend_Stage__c = &quot;Active Contract&quot; || Current_Backend_Stage__c = &quot;Active Subscription&quot;, 
if(Chartmogul_ARR__c&gt;0, Current_Backend_Stage__c,
IF(Account_Name__r.Account_ARR__c &gt; 0 ||  Parent_Project__r.Chartmogul_ARR__c &gt; 0, &quot;Subspace&quot;, 
IF(datevalue( etl_subscription_end_date__c) - today() &gt; 0, &quot;Check Data&quot;,&quot;Check Data-Churn?&quot;))),




Case ( Current_Backend_Stage__c,
&quot;Deleted&quot; , IF( Initial_ARR__c &gt; 0, &quot;Churned Customer&quot;,&quot;Deleted&quot;),
&quot;Churned Customer&quot;, If(Isblank( Parent_Project__c ), &quot;Churned Customer&quot;,&quot;Churned Subspace&quot;),
&quot;Trial Active&quot;,&quot;Trial Active&quot;,
&quot;Trial Expired&quot;,&quot;Trial Expired&quot;,
&quot;Expired Contract&quot;,&quot;Expired Contract&quot;,
&quot;Subspace&quot;,&quot;Subspace&quot;,
&quot;&quot;,IF(now()- CreatedDate &lt;1, &quot;New&quot;,&quot; - Missing&quot;),
&quot;What Else: &quot;&amp; Current_Backend_Stage__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Test Formuala</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Project_Account__c</fullName>
        <formula>Account_Name__r.Bad_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the account on project marked as &quot;Bad Account&quot;?</inlineHelpText>
        <label>Bad Project Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>Earliest Contract start date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expansion_Potential__c</fullName>
        <formula>If( Maker_Overage__c &gt; 0,  Maker_Overage__c *   ARR_New__c  /  Purchased_Makers__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expansion Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Lead_Source__c</fullName>
        <formula>Text(Master_User_Contact__r.LeadSource)</formula>
        <inlineHelpText>lead source of the initial trial requester</inlineHelpText>
        <label>Initial Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_User_Account__c</fullName>
        <formula>Master_User_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master User Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_User_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master User Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PB_Account_Searched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PB Account Searched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Project_Name__c</fullName>
        <formula>IF(Isblank( Parent_Project__c ), Account_Name__r.Name ,Parent_Project__r.Account_Name__r.Name)</formula>
        <label>Parent Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Billing_Cycle__c</fullName>
        <label>Prior Billing Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>